# mlflow_workflow_api

./: .gitignore  README.md  Readmre_venv.md  pyproject.toml  tsne_plot.html
backend_service/: app.py
backend_service/backend_service/: main.py
backend_service/tests/: test_all_true.py
backend_service/utilities/: data_preprocess.py  mlflow_class.py  mlflow_predict_class.py  mlflow_training_class.py  plots.py  spc.py
ci_docker/: Dockerfile
experimental/: api_call_clients.py  data_preprocess.py  get_config.py  how_to_mlflow_predict.py  how_to_train.py  how_to_use_data_preprocess.py  how_to_use_mlflowclass.py  how_to_use_mlflowtraining.py  how_to_usepath.py  main_get_post.py  mlflow_training_class.py  model_version.py  prediction_with_low_limit_data.py  spc.py  stepwise_model_from_mlflow.py
experimental/data_loads/: blob_connector_class.py  blobstorage_access.py  data_loading.py  polars_local_access.py  pyarrow_datasets_loading.py  use_blob_connector_class.py  working_with_upath.py
experimental/different_models/: train_use_linear_regression.py  train_use_random_forest.py
experimental/plotting/: make_tsne.py
experimental/test_utilities/: how_to_use_data_preprocess.py  how_to_use_generic_optimizer.py  how_to_use_mlflowclass.py  how_to_use_mlflowpredict.py  how_to_use_mlflowtraining.py
experimental/use_test_api/: get_a_model.py  get_all_data.py  list_available_models.py  list_blob_subblobs.py  list_blobs.py  main_get_post.py  make_optimization_model.py  model_validation.py  post_make_a_prediction.py  trigger_data_statistics.py
(+4 files in other folders)
